--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'de.codecrafters.tableview:tableview:2.8.0'
     implementation 'com.google.code.gson:gson:2.7'
